fix bug were scoreboard was not centered and add boxshadow to card, scoreboard, modal and help-btn

--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body{
 }
 
 .card-container{
-  max-width: 75%;
+  max-width: 80%;
   max-height: 90%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -41,11 +41,10 @@ body{
   background-color: transparent;
   border: var(--border-size) solid #BBA16D;
   border-radius: 20px;
-  width: 100%;
-  height: 100%;
   overflow: hidden;
   cursor: pointer;
   transition: 0.25s ease-in-out;
+  box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 1);
 }
 
 .card:hover{
@@ -73,6 +72,7 @@ body{
   display: flex;
   justify-content: center;
   overflow: hidden;
+  box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 1);
 }
 
 .score-board{
@@ -119,6 +119,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 1);
 }
 
 .help-btn button{
@@ -156,7 +157,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 1);
   font-size: 20px;
 }
 
